modals: Fix spacing issue in generate integration url modal.
As part of the modal redesign, a CSS logic was written in commit
c6168e3382eb5358370b2f2f13225e91a00e6728 to remove the bottom margin
from the last `input-group` element to remove any excess margin at the
bottom of the modals.

The CSS selector `.input-group:last-of-type` however, also removes the
bottom margin when an input group is wrapped inside a parent div.

This commit fixes the above mentioned issue present in the
integration-url-config-options-container div in the generate
integration url modal.

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -1099,6 +1099,12 @@
             }
         }
     }
+
+    #integration-url-config-options-container {
+        /* Same bottom margin as that of input-group,
+           to maintain consistent gap between fields. */
+        margin-bottom: 1.25em; /* 20px at 16px/em */
+    }
 }
 
 .slack-topics-dropdown-dropdown-list-container {
